# VK-algorithms

Lesson 1/Dutch national flag problem/: CMakeLists.txt
Lesson 1/Dutch national flag problem/include/: DutchFlag.hpp
Lesson 1/Dutch national flag problem/src/: main.cpp
Lesson 1/Dutch national flag problem/tests/: 2.dat.ans  5.dat.ans  test.py
Lesson 1/Merge arrays/: CMakeLists.txt
Lesson 1/Merge arrays 2/: CMakeLists.txt
Lesson 1/Merge arrays 2/include/: mergeArray.hpp
Lesson 1/Merge arrays 2/src/: main.cpp
Lesson 1/Merge arrays 2/tests/: 5.dat.ans
Lesson 1/Merge arrays/include/: mergeArray.hpp
Lesson 1/Merge arrays/src/: main.cpp
Lesson 1/Merge arrays/tests/: 2.dat.ans  3.dat.ans  test.py
Lesson 1/Reverse array/: CMakeLists.txt
Lesson 1/Reverse array/src/: main.cpp
Lesson 1/Reverse array/tests/: 2.dat.ans  test.py
Lesson 1/Reverse part array/src/: main.cpp
Lesson 1/Reverse part array/tests/: 2.dat.ans  4.dat.ans
Lesson 1/Shift even numbers/: CMakeLists.txt
Lesson 1/Shift even numbers/include/: shift_even.hpp
Lesson 1/Shift even numbers/src/: main.cpp
Lesson 1/Shift even numbers/tests/: 1.dat.ans  2.dat.ans  3.dat.ans  4.dat.ans  5.dat.ans  test.py
Lesson 1/Sort array with 0 and 1/: CMakeLists.txt
Lesson 1/Sort array with 0 and 1/include/: sort10.hpp
Lesson 1/Sort array with 0 and 1/src/: main.cpp
Lesson 1/Sort array with 0 and 1/tests/: 3.dat.ans  test.py
Lesson 1/Two sum/: CMakeLists.txt
Lesson 1/Two sum/include/: two-sum.hpp
Lesson 1/Two sum/src/: main.cpp  two-sum.cpp
Lesson 1/Two sum/tests/: 5.dat.ans  test.py
Lesson 1/Zero in back/: CMakeLists.txt
Lesson 1/Zero in back/include/: ReverseArray.hpp  ReversePartArray.hpp  zero_in_back.hpp
Lesson 1/Zero in back/src/: main.cpp
Lesson 1/Zero in back/tests/: 1.dat.ans  2.dat.ans  3.dat.ans  test.py
Lesson 2/Cycle list/: CMakeLists.txt
Lesson 2/Cycle list/include/: cycle_list.hpp  node.hpp
Lesson 2/Cycle list/src/: main.cpp
Lesson 2/Cycle list/tests/: test.py
Lesson 2/Find middle of list/: CMakeLists.txt
Lesson 2/Find middle of list/include/: find_middle.hpp
Lesson 2/Find middle of list/src/: main.cpp
Lesson 2/Find middle of list/tests/: test.py
Lesson 2/Is base/: CMakeLists.txt
Lesson 2/Is base/include/: is_base.hpp
Lesson 2/Is base/src/: main.cpp
Lesson 2/Is base/tests/: test.py
Lesson 2/Merge lists/: CMakeLists.txt
Lesson 2/Merge lists/include/: merge_lists.hpp
Lesson 2/Merge lists/src/: main.cpp
Lesson 2/Merge lists/tests/: test.py
Lesson 2/Palindrome/: CMakeLists.txt
Lesson 2/Palindrome/include/: palindrome.hpp
Lesson 2/Palindrome/src/: main.cpp
Lesson 2/Palindrome/tests/: test.py
Lesson 2/Remove element/: CMakeLists.txt
Lesson 2/Remove element/include/: remove.hpp
Lesson 2/Remove element/src/: main.cpp
Lesson 2/Remove element/tests/: test.py
Lesson 2/Reverse Linked List/: CMakeLists.txt
Lesson 2/Reverse Linked List/include/: reverse_linked_list.hpp
Lesson 2/Reverse Linked List/src/: main.cpp
Lesson 2/Reverse Linked List/tests/: 4.dat.ans  test.py
Lesson 3/Array of anagram/: CMakeLists.txt
Lesson 3/Array of anagram/include/: anagram_array.hpp
Lesson 3/Array of anagram/src/: anagram_array.cpp  main.cpp
Lesson 3/Array of anagram/tests/: 1.dat.ans  2.dat.ans  4.dat.ans  5.dat.ans  test.py
Lesson 3/Feed Animals/: CMakeLists.txt
Lesson 3/Feed Animals/include/: feed_animals.hpp
Lesson 3/Feed Animals/src/: feed_animals.cpp  main.cpp
Lesson 3/Feed Animals/tests/: test.py
Lesson 3/Shell sort/: CMakeLists.txt
Lesson 3/Shell sort/include/: shell_sort.hpp
Lesson 3/Shell sort/src/: main.cpp
Lesson 3/Shell sort/tests/: test.py
Lesson 3/Substraction strings/: CMakeLists.txt
Lesson 3/Substraction strings/include/: sub_str.hpp
Lesson 3/Substraction strings/src/: main.cpp  sub_str.cpp
Lesson 3/Substraction strings/tests/: test.py
Lesson 3/Sum two elems of array/: CMakeLists.txt
Lesson 3/Sum two elems of array/include/: sum_two_elems.hpp
Lesson 3/Sum two elems of array/src/: main.cpp
Lesson 3/Very Easy Task/: CMakeLists.txt
Lesson 4/Compare Trees/: CMakeLists.txt
Lesson 4/Max Min Mult/: CMakeLists.txt
Lesson 4/Max Min Mult/include/: max_min_mult.hpp
Lesson 4/Max Min Mult/src/: max_min_mult.cpp
Lesson 4/Max Min Mult/tests/: CMakeLists.txt  tests.cpp
Lesson 4/Min Depth/: CMakeLists.txt
Lesson 4/Mirror Tree/: CMakeLists.txt
Lesson 4/Node/: node.hpp
Lesson 4/Sub tree/: CMakeLists.txt
Lesson 4/Sub tree/include/: sub_trees.hpp
Lesson 4/Sub tree/src/: sub_trees.cpp
Lesson 4/Sub tree/tests/: CMakeLists.txt  tests.cpp
Lesson 4/Symmetric Tree/: CMakeLists.txt
Lesson 4/Tree from array/: CMakeLists.txt
Lesson 5/Is Complete Tree/: CMakeLists.txt
Lesson 5/Is Complete Tree/include/: is_complete_tree.hpp
Lesson 5/Is Complete Tree/src/: is_complete_tree.cpp
Lesson 5/Is Complete Tree/tests/: CMakeLists.txt  tests.cpp
Lesson 5/Is Max Heap/: CMakeLists.txt
Lesson 5/Is Max Heap/include/: is_max_heap.hpp
Lesson 5/Is Max Heap/src/: is_max_heap.cpp
Lesson 5/Is Max Heap/tests/: CMakeLists.txt  tests.cpp
(+25 files in other folders)
